🐛 Fixed in signup:  overflow, added login link , fixed date placeholder

--- a/frontend/src/pages/Portal/Portal.css
+++ b/frontend/src/pages/Portal/Portal.css
@@ -36,12 +36,9 @@ input[type="checkbox"] {
 }
 
 .login-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   width: 400px;
   padding: 40px;
-  transform: translate(-50%, -50%);
+  transform: scale(0.85);
   background: rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
@@ -198,4 +195,7 @@ input[type="checkbox"] {
 
 .logo {
   filter: drop-shadow(0 00px 10px var(--accent-color));
+  position: absolute;
+  top: 0;
+  left: 0;
 }
